# GameOfLife

./: CMakeLists.txt  doxyfile
UIX/Glade/: GameOfLife_UI.glade
include/: Cell.hpp  Configuration.hpp  Engine.hpp  GameOfLife.hpp  GolWindow.hpp  Map.hpp  Rule.hpp  UI.hpp  constants.hpp  utils_debug.hpp
src/: Configuration.cpp  Engine.cpp  GameOfLife.cpp  GolWindow.cpp  Map.cpp  Rule.cpp  UI.cpp  main.cpp
tests/: Cell_tests.cpp  Engine_tests.cpp  Map_tests.cpp  Rule_tests.cpp
